# tricko-client

./: .gitignore  Cargo.toml  Product.wxs  README.md  build.rs  build.wxs  package-lock.json  package.json  tauri.conf.json  vite.config.js
frontend/: index.html  script.js
frontend-dist/: script.js
src/: c.rs  deeplink.js  dev.js  discord.rs  drpc.js  index.html  keybinding.js  main.js  main.rs  server.rs  utils.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: discord.rs  lib.rs  main.rs
