[package]
name = "tricko-client"
version = "0.0.1"
description = "Tauri client for Tricko.pro"
authors = ["robertpakalns"]
edition = "2021"

[lib]
name = "tricko_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
