[package]
name = "tricko-client"
version = "1.0.0"
edition = "2021"

[dependencies]
discord-rich-presence = "0.2.5"
ico = "0.4.0"
tao = "0.33.0"
tiny_http = "0.12.0"
urldecode = "0.1.1"
webbrowser = "1.0.4"
wry = { version = "0.51.0", features = ["devtools"] }

[build-dependencies]
winres = "0.1.12"
