[package]
name = "tricko-client"
version = "0.1.0"
description = "A Tauri client for Tricko.pro website"
authors = ["robertpakalns"]
edition = "2021"

[lib]
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
tauri = { version = "2.5.1", features = ["devtools"] }
