[package]
name = "tricko-client"
version = "0.1.0"
description = "A Tauri client for Tricko.pro website"
authors = ["robertpakalns"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
discord-rich-presence = "0.2.5"
serde_json = "1.0.140"
tauri = { version = "2.5.1", features = ["devtools"] }
tauri-plugin-deep-link = "2"
webbrowser = "1.0.4"
